GetAllWithUrunAndSubeByTedarikciId filtreleme eklendi

--- a/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
@@ -39,7 +39,8 @@
 
     <!--Select2 css-->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-
+    <!--Select2 script-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.8/js/select2.min.js" defer></script>
 
 
      <!--Jquery script-->
@@ -73,29 +74,24 @@
                 <!--Logo start-->
                 <div class="logo-main">
                     <div class="logo-normal">
-                        <svg class=" icon-30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect x="-0.757324" y="19.2427" width="28" height="4" rx="2" transform="rotate(-45 -0.757324 19.2427)" fill="currentColor" />
-                            <rect x="7.72803" y="27.728" width="28" height="4" rx="2" transform="rotate(-45 7.72803 27.728)" fill="currentColor" />
-                            <rect x="10.5366" y="16.3945" width="16" height="4" rx="2" transform="rotate(45 10.5366 16.3945)" fill="currentColor" />
-                            <rect x="10.5562" y="-0.556152" width="28" height="4" rx="2" transform="rotate(45 10.5562 -0.556152)" fill="currentColor" />
-                        </svg>
+                        <h4 id="collapsed-logo"></h4>
                     </div>
                     <div class="logo-mini">
-                        <svg class=" icon-30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect x="-0.757324" y="19.2427" width="28" height="4" rx="2" transform="rotate(-45 -0.757324 19.2427)" fill="currentColor" />
-                            <rect x="7.72803" y="27.728" width="28" height="4" rx="2" transform="rotate(-45 7.72803 27.728)" fill="currentColor" />
-                            <rect x="10.5366" y="16.3945" width="16" height="4" rx="2" transform="rotate(45 10.5366 16.3945)" fill="currentColor" />
-                            <rect x="10.5562" y="-0.556152" width="28" height="4" rx="2" transform="rotate(45 10.5562 -0.556152)" fill="currentColor" />
-                        </svg>
+                        <h6 id="collapsed-logo"></h6>
+
                     </div>
                 </div>
                 <!--logo End-->
 
 
 
-                <h4 class="logo-title">Hope UI</h4>
+                
+                    <h6 class="logo-title ms-3">
+                        <img src="~/assets/images/login/seyhanlar_logo.png" class="img-fluid gradient-main animated-scaleX" alt="images" style="width: 150px;height: 40px;">
+                    </h6>
+               
             </a>
-            <div class="sidebar-toggle" data-toggle="sidebar" data-active="true">
+            <div class="sidebar-toggle" id="sidebarbuton" data-toggle="sidebar" data-active="true">
                 <i class="icon">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M4.25 12.2744L19.25 12.2744" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -103,6 +99,29 @@
                     </svg>
                 </i>
             </div>
+                <script type="text/javascript">
+                $(document).ready(function () {
+                   
+                    // Tüm nav-link elementlerini seç
+                    $('#sidebarbuton').click(function () {
+                        // H1 elemanını seç
+                        var h1Element = $("#collapsed-logo");
+
+                        // H1 elemanının içeriğini kontrol et
+                        if (h1Element.text().trim() !== '') {
+                            // Eğer içerik varsa sil
+                            h1Element.empty();
+                        } else {
+                            // Eğer içerik yoksa istenen değeri ekle
+                            h1Element.text("B2B");
+                        }
+                    });
+
+                    
+                });
+
+
+                </script>
         </div>
 
         <div class="sidebar-body pt-0 data-scrollbar">
@@ -516,15 +535,7 @@
                             </svg>
                         </i>
                     </div>
-                    <div class="input-group search-input">
-                        <span class="input-group-text" id="search-input">
-                            <svg class="icon-18" width="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="11.7669" cy="11.7666" r="8.98856" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></circle>
-                                <path d="M18.0186 18.4851L21.5426 22" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                            </svg>
-                        </span>
-
-                    </div>
+       
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon">
                             <span class="mt-2 navbar-toggler-bar bar1"></span>
@@ -537,11 +548,11 @@
 
                             <li class="nav-item dropdown">
                                 <a class="py-0 nav-link d-flex align-items-center" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="~/HopeUi-Dashboard/assets/images/avatars/01.png" alt="User-Profile" class="theme-color-default-img img-fluid avatar avatar-50 avatar-rounded">
+                                    <img src="~/HopeUi-Dashboard/assets/images/avatars/03.png" alt="User-Profile" class="theme-color-default-img img-fluid avatar avatar-50 avatar-rounded">
 
                                     <div class="caption ms-3 d-none d-md-block ">
                                         <h6 class="mb-0 caption-title">@ViewBag.KullanıcıAdi</h6>
-                                        <p class="mb-0 caption-sub-title">Marketing Administrator</p>
+                                        <p class="mb-0 caption-sub-title">B2B App User</p>
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
@@ -643,8 +654,7 @@
     <!--Swal script-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <!--Select2 script-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.8/js/select2.min.js" defer></script>
+   
 
 
 </body>
