--- a/B2BApp.Web/Views/Satis/Index.cshtml
+++ b/B2BApp.Web/Views/Satis/Index.cshtml
@@ -14,6 +14,7 @@
     <br />
 
 
+
     <div class="p-3 border bg-light">
 
     <table id="satislarTable" class="display" style="width:100%">
@@ -52,7 +53,8 @@
             <br />
 
             <div class="input-group">
-                <label for="urunSelect" class="form-label" style="margin-right: 10px;">Urun: </label> <select class="select2" id="urunSelect" placeholder='select item'></select>
+                <label for="urunSelect" class="form-label" style="margin-right: 10px;">Urun: </label> 
+                <select class="select2" id="urunSelect" placeholder='select item'></select>
             </div>
             <br />
 
@@ -132,7 +134,10 @@
 
 
 
-
+<!--Select2 css-->
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<!--Select2 script-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.8/js/select2.min.js"></script>
 <script type="text/javascript">
     let table;
 
